# delegated

./: README.md  __init__.py  delegated.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_delegated.py
tests/: test_delegated.py
