[project]
name = "delegated"
version = "0.2"
description = "Utility to quickly delegate attributes to subordinate objects via proxy (property)."
authors = [
    { name = "timjolson", email = "timjolson@users.noreply.github.com" }
]
readme = "README.md"
urls = { "Homepage" = "https://github.com/timjolson/delegated" }
license = { file = "LICENSE" }
requires-python = ">=3.7"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
